--- a/config.toml
+++ b/config.toml
@@ -14,9 +14,9 @@ paginate = 10
 [params]
   # Shown in the home page
   subtitle = "Subtitle Here"
-  brand = "Blackburn"
+  brand = "Data Science"
   #googleAnalytics = "Your Google Analytics tracking ID"
-  disqus = "Your Disqus shortname"
+  #disqus = "Your Disqus shortname"
   # CSS name for highlight.js
   highlightjs = "androidstudio"
   dateFormat = "02 Jan 2006, 15:04"
