--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ paginate = 10
 
 [params]
   # Shown in the home page
-  subtitle = "Subtitle Here"
+  subtitle = "Your opinion of me is p > 0.05"
   brand = "Data Science"
   #googleAnalytics = "Your Google Analytics tracking ID"
   #disqus = "Your Disqus shortname"
