--- a/config.toml
+++ b/config.toml
@@ -13,11 +13,11 @@ paginate = 10
 
 [params]
   # Shown in the home page
-  subtitle = "Your opinion of me is p > 0.05"
+  subtitle = "Thin Thread"
   brand = "Data Science"
   #googleAnalytics = "Your Google Analytics tracking ID"
   #disqus = "Your Disqus shortname"
-  # CSS name for highlight.js
+  #CSS name for highlight.js
   highlightjs = "androidstudio"
   dateFormat = "02 Jan 2006, 15:04"
 
