--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ paginate = 10
   # Shown in the home page
   subtitle = "ThinThread"
   brand = "Data Science"
-  #googleAnalytics = "Your Google Analytics tracking ID"
+  googleAnalytics = "UA-109551597-1"
   #disqus = "Your Disqus shortname"
   #CSS name for highlight.js
   highlightjs = "androidstudio"
